ajout des commentaires de section

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Thomas Jeanne</title>
+    <!-- Liens vers les polices Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
+    <!-- Feuilles de style -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
+    <!-- En-tête avec navigation et liens sociaux -->
     <header>
         <h1>Thomas Jeanne Développeur</h1>
         <nav>
@@ -36,6 +39,7 @@
     </header>
 
     <main>
+        <!-- Section d'accueil -->
         <section id="accueil">
             <div class="accueil-content">
                 <div class="portrait">
@@ -51,6 +55,7 @@
             </div>
         </section>
         
+        <!-- Section À propos -->
         <section id="apropos">
             <div class="apropos-content">
                 <h2>À propos de moi</h2>
@@ -61,6 +66,7 @@
             </div>
         </section>
 
+        <!-- Section Compétences -->
         <section id="competences">
             <div class="competences-content">
                 <h2>Mes compétences</h2>
@@ -73,6 +79,7 @@
             </div>
         </section>
 
+        <!-- Section Projets -->
         <section id="projets">
             <div class="projets-content">
                 <h2>Mes projets</h2>
@@ -91,6 +98,7 @@
             </div>
         </section>
 
+        <!-- Section Contact avec formulaire -->
         <section id="contact">
             <div class="contact-content">
                 <h2>Contactez-moi</h2>
@@ -125,6 +133,7 @@
         </section>
     </main>
 
+    <!-- Pied de page avec liens sociaux et copyright -->
     <footer>
         <div class="social-links footer-social">
             <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
